--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ DB_NAME=gppkcbn
 LOCAL_HOST=127.0.0.1
 LOCAL_USERNAME=root
 LOCAL_PASSWORD=L2HYTo237!
-LOCAL_DATABASE=gppkcbn
+LOCAL_DATABASE=cerdasbangsa
 
 REDIS_HOST=localhost
 REDIS_PORT=6379
